More spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -315,12 +315,13 @@ h3 {
     border-radius: 10px;
 }
 .facility-col p{
-    padding: 0;
+    padding: 10px;
 }
 .facility-col h3{
-    margin-top: 16px;
-    margin-bottom: 15px;
+    margin-top: 6px;
+    /*margin-bottom: 5px;*/
     text-align: left;
+    padding: 10px;
 }
 
 /*---------------- testimonials ------------------*/
@@ -391,7 +392,7 @@ h3 {
 
 @media(max-width:700px){
     .cta h1{
-        font-size: 24px;
+        font-size: 20px;
     }
 }
 
